tests/vertical-slice/accept/string_slice_full.hew
fn main() -> i64 {
    let s: string = "hié";
    let slice: string = s[..];
    println(slice);
    slice.len()
}
