tests/vertical-slice/reject/closure_explicit_move_required.hew
// Reject fixture: ClosureExplicitMoveRequired
// A closure that captures a non-Copy binding (string) without "move" is rejected.
// Expected: type error ClosureExplicitMoveRequired
fn main() {
    let s: string = "hew";
    let _f = || s;
}
